// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreCard renders correctly 1`] = `
<div
  class="ext-growthExperiments-ScoreCard"
>
  <div
    class="ext-growthExperiments-ScoreCard__data-display"
  >
    <span
      class="cdx-icon cdx-icon--medium ext-growthExperiments-ScoreCard__data-display__icon"
    >
      <svg
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          some icon label
        </title>
        <g>
          some icon
        </g>
      </svg>
    </span>
    
    123
    
  </div>
  <div
    class="ext-growthExperiments-ScoreCard__label"
  >
    <span
      class="ext-growthExperiments-CText ext-growthExperiments-CText--color-subtle ext-growthExperiments-ScoreCard__label__text"
    >
      
      some label
      
    </span>
    <!--v-if-->
  </div>
</div>
`;

exports[`ScoreCard renders correctly info slot 1`] = `
<div
  class="ext-growthExperiments-ScoreCard"
>
  <div
    class="ext-growthExperiments-ScoreCard__data-display"
  >
    <span
      class="cdx-icon cdx-icon--medium ext-growthExperiments-ScoreCard__data-display__icon"
    >
      <svg
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          some icon label
        </title>
        <g>
          some icon
        </g>
      </svg>
    </span>
    
    123
    
  </div>
  <div
    class="ext-growthExperiments-ScoreCard__label ext-growthExperiments-ScoreCard__label--with-info"
  >
    <span
      class="ext-growthExperiments-CText ext-growthExperiments-CText--color-subtle ext-growthExperiments-ScoreCard__label__text"
    >
      
      some label
      
    </span>
    <span>
      <div
        class="ext-growthExperiments-Popover"
      >
        <div>
          <div>
            
            <button
              aria-label="the label for the info icon"
              class="cdx-button cdx-button--action-default cdx-button--weight-quiet cdx-button--size-medium cdx-button--icon-only ext-growthExperiments-ScoreCards__info-button"
            >
              
              <span
                class="cdx-icon cdx-icon--medium"
              >
                <svg
                  aria-hidden="true"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!--v-if-->
                  <path
                    d=""
                  />
                </svg>
              </span>
              
            </button>
            
          </div>
          <div
            class="ext-growthExperiments-Popover__surface-container"
          >
            <!--v-if-->
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
